# waystone-browser

./: .gitignore  PLAN.md  README.md  com.waystone.browser.yml  install.sh  pyproject.toml  run.sh
data/: com.waystone.browser.desktop  com.waystone.browser.metainfo.xml
waystone/: async_utils.py  bookmark_dialog.py  bookmark_service.py  bookmarks_bar.py  db.py  gemini_client.py  gemtext.py  gopher_client.py  history_dialog.py  history_service.py  identity_dialog.py  identity_service.py  main.py  navigation.py  newtab.html  settings_dialog.py  settings_service.py  spartan_client.py  tab.py  text_viewer.py  themes.py  titan_client.py  tofu_store.py
website/: index.html
