[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "waystone-browser"
version = "0.1.0"
description = "Multi-protocol GUI browser: HTTP/HTTPS, Gemini, Gopher"
requires-python = ">=3.11"
dependencies = ["aiosqlite>=0.19"]

[project.scripts]
waystone = "waystone.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["waystone*"]

[tool.setuptools.package-data]
waystone = ["newtab.html"]
