[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "waystone-browser"
version = "1.0.0"
description = "Multi-protocol GUI browser: HTTP/HTTPS, Gemini, Gopher, Spartan, Titan"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19",
    "cryptography>=41",
]

[project.scripts]
waystone = "waystone.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["waystone*"]

[tool.setuptools.package-data]
waystone = ["newtab.html"]
