[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "waystone-browser"
version = "1.0.0"
description = "Multi-protocol GUI browser: HTTP/HTTPS, Gemini, Gopher, Spartan, Titan"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19",
    "cryptography>=41",
]

[project.scripts]
waystone = "waystone.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["waystone*"]

[tool.setuptools.package-data]
waystone = ["newtab.html"]

[tool.setuptools]
data-files = [
    ["share/applications", ["data/com.waystone.browser.desktop"]],
    ["share/icons/hicolor/scalable/apps", ["data/icons/hicolor/scalable/apps/com.waystone.browser.svg"]],
    ["share/icons/hicolor/48x48/apps", ["data/icons/hicolor/48x48/apps/com.waystone.browser.png"]],
]
